# raytracing

RayTracer/: CMakeLists.txt  CMakeSettings.json
RayTracer/cmake/: FindEigen3.cmake  FindGLFW.cmake
RayTracer/gui/: CMakeLists.txt  app.cpp
RayTracer/img/: CMakeLists.txt  camera.h  color.h  main.cpp  sphere.h  utilities.h
RayTracer/img_cuda/: CMakeLists.txt  hittable_list.h  main.cu  sphere.h  utilities.h  vec3.h
RayTracer/rayTracingLib/: CMakeLists.txt
RayTracer/rayTracingLib/common/: rayTracing.cpp
RayTracer/rayTracingLib/cuda_src/: camera.h  hittable.h  hittable_list.h  materials.h  ray.h  rayTracing.cu  sphere.h  utilities.cu  utilities.h  vec3.h
RayTracer/rayTracingLib/include/: rayTracing.h
RayTracer/rayTracingLib/src/: camera.h  hittable.h  hittable_list.cpp  hittable_list.h  materials.h  ray.h  rayTracing.cpp  rayTracing_scalar.cpp  sphere.h  utilities.h
RayTracer/rayTracingLib/test/: testlib.cpp  testlib_cuda.cpp
